--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.73.4",
     "react-dom": "18.2.0",
     "react-native-web": "~0.19.6",
-    "@expo/webpack-config": "~19.0.1"
+    "@expo/webpack-config": "~19.0.1",
+    "@expo/vector-icons": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
